IS-61 Refactored